spacing corrected

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -119,6 +119,7 @@
   }
   
   .about-text p {
+    word-spacing: -2px;
     font-size: 18px;
     line-height: 1.8;
     text-align: justify;
